# CustomLocatorsRecipeBook

./: LICENSE  README.md  pyproject.toml
RecipeBook/: selenide.py  test_google.py  wait.py
